# Videoflix

./: .coveragerc  .env.template  .gitignore  CORS_COOKIE_CONFIG.md  backend.entrypoint.sh  cleanup_test_media.py  conftest.py  pyproject.toml  readme.md  requirements.txt
core/: middleware.py  settings.py  test_settings.py  urls.py  views.py
user_auth_app/: admin.py
user_auth_app/api/: authentication.py  serializers.py  tokens.py  urls.py  views.py
user_auth_app/templates/: acc_active_email.html  password_reset_email.html
user_auth_app/tests/: test_login.py  test_logout.py  test_password_confirm.py  test_password_reset.py  test_registration.py  test_token_refresh.py
videoflix_app/: admin.py  apps.py  models.py  signals.py  tasks.py
videoflix_app/api/: serializers.py  urls.py  views.py
videoflix_app/migrations/: 0001_initial.py
videoflix_app/templates/: acc_active_email.html
videoflix_app/tests/: test_pytest_style_examples.py  test_tasks_and_signals.py  test_video.py  test_video_conversion.py  test_video_conversion_edge_cases.py
